--- a/src/app/views/agent/agent-detail/agent-detail.component.html
+++ b/src/app/views/agent/agent-detail/agent-detail.component.html
@@ -7,7 +7,7 @@
             onerror="this.src='../../../../images/placeholder.png'" alt="" />
         </div>
         <h4>{{agentInfo.name}}<a><img
-              src="{{agentInfo.favorite?'../../../../images/favourite-icon.svg':'../../../../images/star.svg'}}" alt=""
+              src="{{agentInfo.favorite =='yes'?'../../../../images/favourite-icon.svg':'../../../../images/star.svg'}}" alt=""
               (click)="onStarClick(item)"></a></h4> <span
           class="building-icon padding-left-twenty-five">{{agentInfo.entityId}}</span>
         <div class="clearfix"></div>
