--- a/src/app/views/dashboard/search/search.component.html
+++ b/src/app/views/dashboard/search/search.component.html
@@ -22,7 +22,7 @@
           <li *ngFor="let item of searchedUsers; let i = index;">
             <div class="col-xs-12 col-md-6 cell-bg">
               <div class="agent-detail ag-perform">
-                <div class="dp" (click)="onItemClick(item)"><img src="{{item.type=='Agent'?'../../../../../../images/building-icon.svg':'../../../../../../images/username.svg'}}"
+                <div class="dp" (click)="onItemClick(item)"><img src="{{item.type=='A'?'../../../../../../images/building-icon.svg':'../../../../../../images/username.svg'}}"
                     alt="" /></div>
                 <h4><a (click)="onItemClick(item)">{{item.name}}</a><a><img src="{{item.favorite =='yes'?'../../../../images/favourite-icon.svg':'../../../../images/star.svg'}}"
                       alt="" (click)="onStarClick(item,i)"></a></h4> <span (click)="onItemClick(item)">{{getAddress(item)}}</span>
