--- a/src/app/views/person/person-detail/person-detail.component.html
+++ b/src/app/views/person/person-detail/person-detail.component.html
@@ -3,13 +3,13 @@
     <div class="col-xs-12 col-md-12 cell-bg">
       <div class="agent-detail ">
         <div class="dp">
-          <div class="badge bd-col">A</div><img src={{agentInfo.agentImg}}
+          <div class="badge bd-col">P</div><img src={{personInfo.agentImg}}
             onerror="this.src='../../../../images/placeholder.png'" alt="" />
         </div>
-        <h4>{{agentInfo.name}}<a><img
-              src="{{agentInfo.favorite =='yes'?'../../../../images/favourite-icon.svg':'../../../../images/star.svg'}}" alt=""
-              (click)="onStarClick()"></a></h4> <span
-          class="building-icon padding-left-twenty-five">{{agentInfo.entityId}}</span>
+        <h4>{{personInfo.name}}<a><img
+              src="{{personInfo.favorite =='yes'?'../../../../images/favourite-icon.svg':'../../../../images/star.svg'}}"
+              alt="" (click)="onStarClick(item)"></a></h4> <span
+          class="building-icon padding-left-twenty-five">{{personInfo.entityId}}</span>
         <div class="clearfix"></div>
         <!-- <div class="amount bx1"><span>Net Premium</span><br>$ {{agentInfo.netPermium}}</div>
         <div class="amount bx2"><span><img src="../../../../images/share.svg" alt="" (click)="sendVCard()" /></span>
@@ -21,7 +21,7 @@
 
     <div class="col-xs-12 col-md-12">
       <ul class="agent-details">
-        <li *ngFor="let item of agentMenues" class="{{item.class}}" (click)="onAgentMenuClick(item)"><a>{{item.title}}</a></li>
+        <li *ngFor="let item of personMenues" class="{{item.class}}" (click)="onPersonMenuClick(item)"><a>{{item.title}}</a></li>
       </ul>
     </div>
   </div>
