--- a/src/cssFiles/custom.css
+++ b/src/cssFiles/custom.css
@@ -300,3 +300,7 @@ mat-ink-bar.mat-ink-bar {
   padding: 5px;
   border-radius: 4px;
 }
+ul.agent-details li.agents a {
+  background: url(../images/building-icon.svg) no-repeat left;
+  padding-left: 35px;
+}
