--- a/src/app/views/dashboard/agent-under-plan/agent-under-plan.component.html
+++ b/src/app/views/dashboard/agent-under-plan/agent-under-plan.component.html
@@ -1,14 +1,16 @@
 <div class="container app-bg2">
   <ul>
-    <li *ngFor="let item of agentsUnderPlan">
+    <li *ngFor="let item of agentsUnderPlan;let i=index">
       <div class="row">
         <div class="col-xs-12 col-md-6 cell-bg">
           <div class="agent-detail">
             <div class="dp">
-              <img src="images/baseline-business-24px.svg" alt="" />
+              <img src="images/baseline-business-24px.svg" alt="" (click)="onAgentClick(item,i)"/>
               <div class="dpProfile_wp proActiBg">A</div>
             </div>
-            <h4>{{item.name}}<span>({{item.entityId}})</span><a href=""><img src="images/star.svg" alt=""></a></h4>
+            <h4><a (click)="onAgentClick(item)">{{item.name}}</a><span (click)="onAgentClick(item)">({{item.entityId}})</span><a><img img
+                  src="{{checkEntityFavorite(item)?'../../../../images/favourite-icon.svg':'../../../../images/star.svg'}}"
+                  alt="" (click)="onStarClick(item,i)"></a></h4>
             <span>{{item.city+','+item.state}}</span>
             <div class="clearfix"></div>
             <div class="row">
