--- a/src/app/customUI/dialogs/update-agent-profile/update-agent-profile.component.html
+++ b/src/app/customUI/dialogs/update-agent-profile/update-agent-profile.component.html
@@ -4,55 +4,141 @@
     <!-- Modal content-->
     <div class="modal-content">
       <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <button type="button" class="close" data-dismiss="modal" #closeEntityUpdateProfileModel>&times;</button>
         <h4 class="modal-title">Agent Contact Information</h4>
       </div>
-      <form role="form">
+      <form role="form" [formGroup]="entityInfoForm">
         <div class="modal-body">
 
           <div class="form-group">
             <label for="usr">Name</label>
-            <input type="text" class="form-control" id="name" placeholder="NETCO. Inc">
+            <input type="text" class="form-control" id="name" formControlName="name" placeholder="NETCO. Inc">
+            <!-- Error View -->
+            <div id="errorDiv" *ngIf="entityInfoForm.get('name').hasError('required') && submitClicked">
+              You entered not valid input.
+            </div>
+            <div id="errorDiv" *ngIf="entityInfoForm.get('name').hasError('minlength') && submitClicked">
+              Name must be at least 2 characters long.
+            </div>
+            <!-- Error View End -->
           </div>
 
           <div class="form-group">
             <label for="Address">Address</label>
-            <input type="text" class="form-control" id="address" placeholder="7345 S. Pechos Rd.">
+            <input type="text" class="form-control" id="addr1" formControlName="addr1"
+              placeholder="Address1">
+            <!-- Error View -->
+            <div id="errorDiv" *ngIf="entityInfoForm.get('addr1').hasError('required') && submitClicked">
+              You entered not valid input.
+            </div>
+            <div id="errorDiv" *ngIf="entityInfoForm.get('addr1').hasError('minlength') && submitClicked">
+              Address must be at least 2 characters long.
+            </div>
+            <!-- Error View End -->
+
+            <input type="text" class="form-control" id="addr2" formControlName="addr2"
+              placeholder="Address2">
+            <!-- Error View -->
+            <div id="errorDiv" *ngIf="entityInfoForm.get('addr2').hasError('required') && submitClicked">
+              You entered not valid input.
+            </div>
+            <div id="errorDiv" *ngIf="entityInfoForm.get('addr2').hasError('minlength') && submitClicked">
+              Address must be at least 2 characters long.
+            </div>
+            <!-- Error View End -->
+            <input type="text" class="form-control" id="addr3" formControlName="addr3"
+              placeholder="Address3">
+            <!-- Error View -->
+            <div id="errorDiv" *ngIf="entityInfoForm.get('addr3').hasError('required') && submitClicked">
+              You entered not valid input.
+            </div>
+            <div id="errorDiv" *ngIf="entityInfoForm.get('addr3').hasError('minlength') && submitClicked">
+              Address must be at least 2 characters long.
+            </div>
+            <!-- Error View End -->
+            <input type="text" class="form-control" id="addr4" formControlName="addr4"
+              placeholder="Address4">
+            <!-- Error View -->
+            <div id="errorDiv" *ngIf="entityInfoForm.get('addr4').hasError('required') && submitClicked">
+              You entered not valid input.
+            </div>
+            <div id="errorDiv" *ngIf="entityInfoForm.get('addr4').hasError('minlength') && submitClicked">
+              Address must be at least 2 characters long.
+            </div>
+            <!-- Error View End -->
           </div>
 
           <div class="form-group">
             <label for="sel1">State</label>
-            <select class="form-control" id="sel1">
-              <option>Select</option>
-              <option selected="selected">Nevada</option>
-              <option>State-1</option>
-              <option>State-2</option>
+            <select class="form-control" id="state" formControlName="state" (change)="onStateChanged($event)">
+              <option [value]="i.stateID" *ngFor="let i of states">{{i.description}}</option>
             </select>
+            <!-- Error View -->
+            <div id="errorDiv" *ngIf="entityInfoForm.get('state').hasError('required') && submitClicked">
+              You entered not valid input.
+            </div>
+            <div id="errorDiv" *ngIf="entityInfoForm.get('state').hasError('minlength') && submitClicked">
+              state must be at least 2 characters long.
+            </div>
+            <!-- Error View End -->
           </div>
 
           <div class="form-group">
             <label for="pin code">Pin Code</label>
-            <input type="text" class="form-control" id="pinCode" placeholder="89120">
+            <input type="text" class="form-control" id="zip" placeholder="89120" formControlName="zip">
+            <!-- Error View -->
+            <div id="errorDiv" *ngIf="entityInfoForm.get('zip').hasError('required') && submitClicked">
+              You entered not valid input.
+            </div>
+            <div id="errorDiv" *ngIf="entityInfoForm.get('zip').hasError('minlength') && submitClicked">
+              Zip must be at least 2 characters long.
+            </div>
+            <!-- Error View End -->
           </div>
 
           <div class="form-group">
             <label for="Contact Number 1">Contact Number 1</label>
-            <input type="text" class="form-control" id="pinCode" placeholder="720-434-1417">
+            <input type="text" class="form-control" id="phone1" placeholder="720-434-1417" formControlName="phone1">
+            <!-- Error View -->
+            <div id="errorDiv" id="errorDiv" *ngIf="entityInfoForm.get('phone1').hasError('required') && submitClicked">
+              You entered not valid input.
+            </div>
+            <div id="errorDiv" id="errorDiv" *ngIf="entityInfoForm.get('phone1').hasError('minlength') && submitClicked">
+              Number must be at least 2 characters long.
+            </div>
+            <!-- Error View End -->
           </div>
 
           <div class="form-group">
             <label for="Contact Number 2">Contact Number 2</label>
-            <input type="text" class="form-control" id="pinCode" placeholder="720-434-1417">
+            <input type="text" class="form-control" id="phone2" placeholder="720-434-1417" formControlName="phone2">
+            <!-- Error View -->
+            <div id="errorDiv" *ngIf="entityInfoForm.get('phone2').hasError('required') && submitClicked">
+              You entered not valid input.
+            </div>
+            <div id="errorDiv" *ngIf="entityInfoForm.get('phone2').hasError('minlength') && submitClicked">
+              Number must be at least 2 characters long.
+            </div>
+            <!-- Error View End -->
           </div>
 
           <div class="form-group">
             <label for="email">E-mail</label>
-            <input type="email" class="form-control" id="email" placeholder="bradleykjohnson@abc.com">
+            <input type="email" class="form-control" id="email" placeholder="bradleykjohnson@abc.com"
+              formControlName="email">
+            <!-- Error View -->
+            <div id="errorDiv" *ngIf="entityInfoForm.get('email').hasError('required') && submitClicked">
+              You entered not valid input.
+            </div>
+            <div id="errorDiv" *ngIf="entityInfoForm.get('email').hasError('pattern') && submitClicked">
+              Invalid Email Address
+            </div>
+            <!-- Error View End -->
           </div>
         </div>
         <div class="modal-footer">
           <a data-dismiss="modal" alt="Cancel" (click)="onCancelClick()"><span>Cancel</span></a>
-          <a data-dismiss="modal" alt="Save Changes">Save Changes</a>
+          <a alt="Save Changes" (click)="onSaveClick()">Save Changes</a>
         </div>
       </form>
     </div>
