--- a/src/app/views/agent/agent-thirteen-month-activity/agent-thirteen-month-activity.component.html
+++ b/src/app/views/agent/agent-thirteen-month-activity/agent-thirteen-month-activity.component.html
@@ -4,8 +4,8 @@
     <div class="col-xs-8 text-center">
       <h1 class="t-agent">13 Month Activity</h1>
     </div>
-    <div class="col-xs-2 text-right toppad"><a (click)="onRecentProfileClick()"  alt="" data-toggle="modal" data-target="#recentAssociatesl"><img
-          src="../../../../images/baseline-history.svg" alt=""></a></div>
+    <div class="col-xs-2 text-right toppad"><a (click)="onRecentProfileClick()" alt="" data-toggle="modal"
+        data-target="#recentAssociatesl"><img src="../../../../images/baseline-history.svg" alt=""></a></div>
   </div>
 
   <div class="container bottom-wrapper-for-back">
@@ -17,175 +17,57 @@
   </div>
   <div class="container app-bg2  " style="padding-top:10px;">
     <div class="row">
-
       <div class="col-xs-12 col-md-6">
-        <div class="row">
-          <div class="col-xs-12 col-md-12 calendar-head">
-            <img src="images/baseline-calendar_today-24px.svg" alt=""> <span> April - 2019</span>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-xs-12 col-md-12 cell-bg">
-            <div class="agent-detail-associates">
-              <div class="clearfix"></div>
-              <div class="row">
-                <div class="col-md-6 col-xs-6">
-                  <div class="amount">NPR Plan Current Month<br><span>$15,595 (93%)</span></div>
-                </div>
-                <div class="col-md-6 col-xs-6">
-                  <div class="amount">NPR Actual<br><span>$15,595 (93%)</span></div>
-                </div>
+        <ul>
+          <li *ngFor="let item of thirteenMonthsModels">
+            <div class="row">
+              <div class="col-xs-12 col-md-12 calendar-head">
+                <img src="images/baseline-calendar_today-24px.svg" alt=""> <span> {{getMonth(item)}} -
+                  {{item.year}}</span>
               </div>
-              <div class="clear paddingTop10"></div>
-              <div class="row">
-                <div class="col-md-6 col-xs-6">
-                  <div class="amount">NPR % of Plan<br><span>$15,595 (93%)</span></div>
-                </div>
-                <div class="col-md-6 col-xs-6">
-                  <div class="amount">CPL Actual<br><span>$15,595 (93%)</span></div>
-                </div>
-              </div>
-              <div class="clear paddingTop10"></div>
-              <div class="row">
-                <div class="col-md-6 col-xs-6">
-                  <div class="amount">CPL Actual<br><span>$15,595 (93%)</span></div>
-                </div>
-                <div class="col-md-6 col-xs-6">
-                  <div class="amount">CPL % of Plan<br><span>$15,595 (93%)</span></div>
+            </div>
+            <div class="row">
+              <div class="col-xs-12 col-md-12 cell-bg">
+                <div class="agent-detail-associates">
+                  <div class="clearfix"></div>
+                  <div class="row">
+                    <div class="col-md-6 col-xs-6">
+                      <div class="amount">NPR Plan Current Month<br><span>${{item.nprPlanned}}</span></div>
+                    </div>
+                    <div class="col-md-6 col-xs-6">
+                      <div class="amount">NPR Actual<br><span>${{item.nprActual}}</span></div>
+                    </div>
+                  </div>
+                  <div class="clear paddingTop10"></div>
+                  <div class="row">
+                    <div class="col-md-6 col-xs-6">
+                      <div class="amount">NPR % of Plan<br><span>{{item.nprPercent}}%</span></div>
+                    </div>
+                    <div class="col-md-6 col-xs-6">
+                      <div class="amount">CPL Actual<br><span>${{item.cplActual}}</span></div>
+                    </div>
+                  </div>
+                  <div class="clear paddingTop10"></div>
+                  <div class="row">
+                    <div class="col-md-6 col-xs-6">
+                      <div class="amount">CPL Plan<br><span>${{item.cplPlanned}}</span></div>
+                    </div>
+                    <div class="col-md-6 col-xs-6">
+                      <div class="amount">CPL % of Plan<br><span>{{item.cplPercent}}%</span></div>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
-          </div>
-        </div>
-      </div>
 
-      <div class="col-xs-12 col-md-6">
-        <div class="row">
-          <div class="col-xs-12 col-md-12 calendar-head">
-            <img src="images/baseline-calendar_today-24px.svg" alt=""> <span> March - 2019</span>
+          </li>
+        </ul>
+        <!-- <div class="row">
+          <div class="col-xs-12 col-md-12 loadMoreWp">
+            <hr />
+            <div class="loadMore"><a href="#" alt="Load More">Load More</a></div>
           </div>
-        </div>
-        <div class="row">
-          <div class="col-xs-12 col-md-12 cell-bg">
-            <div class="agent-detail-associates">
-              <div class="clearfix"></div>
-              <div class="row">
-                <div class="col-md-6 col-xs-6">
-                  <div class="amount">NPR Plan Current Month<br><span>$15,595 (93%)</span></div>
-                </div>
-                <div class="col-md-6 col-xs-6">
-                  <div class="amount">NPR Actual<br><span>$15,595 (93%)</span></div>
-                </div>
-              </div>
-              <div class="clear paddingTop10"></div>
-              <div class="row">
-                <div class="col-md-6 col-xs-6">
-                  <div class="amount">NPR % of Plan<br><span>$15,595 (93%)</span></div>
-                </div>
-                <div class="col-md-6 col-xs-6">
-                  <div class="amount">CPL Actual<br><span>$15,595 (93%)</span></div>
-                </div>
-              </div>
-              <div class="clear paddingTop10"></div>
-              <div class="row">
-                <div class="col-md-6 col-xs-6">
-                  <div class="amount">CPL Actual<br><span>$15,595 (93%)</span></div>
-                </div>
-                <div class="col-md-6 col-xs-6">
-                  <div class="amount">CPL % of Plan<br><span>$15,595 (93%)</span></div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-xs-12 col-md-6">
-        <div class="row">
-          <div class="col-xs-12 col-md-12 calendar-head">
-            <img src="images/baseline-calendar_today-24px.svg" alt=""> <span> February - 2019</span>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-xs-12 col-md-12 cell-bg">
-            <div class="agent-detail-associates">
-              <div class="clearfix"></div>
-              <div class="row">
-                <div class="col-md-6 col-xs-6">
-                  <div class="amount">NPR Plan Current Month<br><span>$15,595 (93%)</span></div>
-                </div>
-                <div class="col-md-6 col-xs-6">
-                  <div class="amount">NPR Actual<br><span>$15,595 (93%)</span></div>
-                </div>
-              </div>
-              <div class="clear paddingTop10"></div>
-              <div class="row">
-                <div class="col-md-6 col-xs-6">
-                  <div class="amount">NPR % of Plan<br><span>$15,595 (93%)</span></div>
-                </div>
-                <div class="col-md-6 col-xs-6">
-                  <div class="amount">CPL Actual<br><span>$15,595 (93%)</span></div>
-                </div>
-              </div>
-              <div class="clear paddingTop10"></div>
-              <div class="row">
-                <div class="col-md-6 col-xs-6">
-                  <div class="amount">CPL Actual<br><span>$15,595 (93%)</span></div>
-                </div>
-                <div class="col-md-6 col-xs-6">
-                  <div class="amount">CPL % of Plan<br><span>$15,595 (93%)</span></div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-xs-12 col-md-6">
-        <div class="row">
-          <div class="col-xs-12 col-md-12 calendar-head">
-            <img src="images/baseline-calendar_today-24px.svg" alt=""> <span> January - 2019</span>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-xs-12 col-md-12 cell-bg">
-            <div class="agent-detail-associates">
-              <div class="clearfix"></div>
-              <div class="row">
-                <div class="col-md-6 col-xs-6">
-                  <div class="amount">NPR Plan Current Month<br><span>$15,595 (93%)</span></div>
-                </div>
-                <div class="col-md-6 col-xs-6">
-                  <div class="amount">NPR Actual<br><span>$15,595 (93%)</span></div>
-                </div>
-              </div>
-              <div class="clear paddingTop10"></div>
-              <div class="row">
-                <div class="col-md-6 col-xs-6">
-                  <div class="amount">NPR % of Plan<br><span>$15,595 (93%)</span></div>
-                </div>
-                <div class="col-md-6 col-xs-6">
-                  <div class="amount">CPL Actual<br><span>$15,595 (93%)</span></div>
-                </div>
-              </div>
-              <div class="clear paddingTop10"></div>
-              <div class="row">
-                <div class="col-md-6 col-xs-6">
-                  <div class="amount">CPL Actual<br><span>$15,595 (93%)</span></div>
-                </div>
-                <div class="col-md-6 col-xs-6">
-                  <div class="amount">CPL % of Plan<br><span>$15,595 (93%)</span></div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-xs-12 col-md-12 loadMoreWp">
-        <hr />
-        <div class="loadMore"><a href="#" alt="Load More">Load More</a></div>
+        </div> -->
       </div>
     </div>
   </div>
