--- a/src/app/views/agent/agent-associates/agent-associates.component.html
+++ b/src/app/views/agent/agent-associates/agent-associates.component.html
@@ -13,11 +13,11 @@
     <div class="row">
 
       <ul>
-        <li *ngFor="let item of associatesModels">
+        <li *ngFor="let item of associatesModels" (click)="onPersonClick(item)">
           <div class="col-xs-12 col-md-6 cell-bg">
             <div class="agent-detail-associates">
               <div class="dp">
-                <img src="../../../../images/ic_note_profile.svg" alt="" />
+                <img src="../../../../images/ic_note_profile.svg" alt="" (click)="onPersonClick(item)"/>
                 <div class="dpProfile_wp proActiBg">A</div>
               </div>
               <h4>{{item.dispname}} <span>({{item.personID}})</span></h4> <span>{{getAddress(item)}}</span> <span
