--- a/src/app/views/agent/agent-notes/agent-notes.component.html
+++ b/src/app/views/agent/agent-notes/agent-notes.component.html
@@ -7,7 +7,7 @@
         <h1 class="t-agent">Notes</h1>
       </div>
       <div class="col-xs-3 text-center tpad"><img src="../../../../images/add_new.svg" alt=""><br><span
-          class="edit-detail"><a data-toggle="modal" data-target="#addNewNotes" (click)="onAddNoteClick()">Add
+          class="edit-detail"><a data-toggle="modal" data-target="#addNewNotes">Add
             New</a></span></div>
     </div>
 
@@ -15,7 +15,7 @@
 
   <div style="background: #F2F2F2">
 
-    <mat-tab-group mat-align-tabs="center" animationDuration="500ms">
+    <mat-tab-group mat-align-tabs="center" animationDuration="500ms" (selectedTabChange)="onTabSelect($event)">
       <mat-tab label="All Notes">
         <app-all-notes></app-all-notes>
       </mat-tab>
