ui fixes and working on currency masking

--- a/src/app/customUI/dialogs/share-v-card/share-v-card.component.html
+++ b/src/app/customUI/dialogs/share-v-card/share-v-card.component.html
@@ -21,7 +21,7 @@
         </div>
         <div class="modal-footer">
           <a data-dismiss="modal" alt="Cancel"><span>Cancel</span></a>
-          <a alt="Sent vCard" (click)="onShareVCardClick()">Sent vCard</a>
+          <a alt="Sent vCard" (click)="onShareVCardClick()">Send vCard</a>
         </div>
       </form>
     </div>
