--- a/src/app/views/agent/agent-notes/agent-notes.component.html
+++ b/src/app/views/agent/agent-notes/agent-notes.component.html
@@ -6,8 +6,8 @@
       <div class="col-xs-7 text-center">
         <h1 class="t-agent">Notes</h1>
       </div>
-      <div class="col-xs-3 text-center tpad"><img src="../../../../images/add_new.svg" alt=""><br><span
-          class="edit-detail"><a data-toggle="modal" data-target="#addNewNotes">Add
+      <div class="col-xs-3 text-center tpad"><img src="../../../../images/add_new.svg" alt=""><br><span class="edit-detail"><a
+            data-toggle="modal" data-target="#addNewNotes">Add
             New</a></span></div>
     </div>
 
@@ -27,3 +27,4 @@
   </div>
 </div>
 <app-add-note></app-add-note>
+<app-update-note></app-update-note>
